* Akylios
** New: Added fail-safe trigger for phase 4. Damage to Jornaru should now trigger P4 if Akylios is submerged.
** Note: Accuracy of timers triggered this way will be dependent on reaction times to damaging Jornaru.
** Note: But should be less inaccurate than when P4 hits early during submerge phases.

Drowned Halls
* Isskal
** New: Added stop trigger to alert for Ice Shard interrupts.
** Change: Adjusted timers to account for new trigger methods.
** Fixed: The initial trigger for both the first Whirlpool event and the first Glacial Wave had Lua search incompatability.

Expert Dungeons
* Added more Unique ID's to Expert bosses.
* Kings Breach
** Autoch & Mondrach
*** Fixed: Saved data wasn't being recorded correctly.

German Translations
* Added: Non-critical translations for Phase Monitor and in-game chat.

----
v0.9.7

Rift Version
* New: Compatible with Rift v1.7

Record Times
* New: Added a date recorder to record times. (Will only effect new records)

Options
* New: Options down the left panel are now separated in to two sections.
* New: Added KBM tab to top section for Global Options.
* New: Added Plug-In tab to top section for all Plug-In settings.
* New: Added Raid tab (red helm) to lower section for all 20-man instances.
* New: Added Sliver tab (silver helm) to lower section for all 10-man instances.
* New: Added Master tab (blue helm) to lower section for Master Mode dungeons.
* New: Added Group tab (gold helm) to lower section for Expert dungeons.
* Alerts
** Change: Reduced the default Alert size by 50%

Engine
* Phase Monitor
** Percentage Based Objectives
*** New: Displayed percantage will change to 2 decimal places below 3% HP.
*** New: When a unit dies it is now displayed as such.
* Encounters
** New: Encounter type checks are now bypassed once already established.
** New: Checks added for Expert Mode and Master Mode dungeon recognition.
* CastBars
** New: Further adjustments to allow for castbar tracking outside of encounters.